# flin-google-keyword-planner-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: mcp-usage-guide.md  release.md  testing.md
docs/plans/: 2026-03-20-google-ads-mcp-design.md  2026-03-21-keyword-ideas-multi-tool-implementation.md  2026-06-23-google-ads-oauth-token-generation.md
src/flin_google_ads_mcp/: __init__.py  auth.py  config.py  google_ads.py  server.py
tests/: test_auth.py  test_config.py  test_query_builders.py
