[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "flin-google-keyword-planner-mcp"
version = "0.2.4"
description = "Google Ads Keyword Planner MCP server with a single keyword research tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "flin.agency" }
]
keywords = ["mcp", "google-ads", "keyword-planner", "model-context-protocol", "claude"]
dependencies = [
  "mcp>=1.6.0",
  "google-ads>=29.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
flin-google-keyword-planner-mcp = "flin_google_ads_mcp.server:main"

[project.urls]
Homepage = "https://github.com/flin-agency/flin-google-keyword-planner-mcp"
Repository = "https://github.com/flin-agency/flin-google-keyword-planner-mcp"
Issues = "https://github.com/flin-agency/flin-google-keyword-planner-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flin_google_ads_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
